[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/Scene/Trigger/ChangeSceneFromTrigger.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="ChangeSceneFromTrigger" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect1" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="area2D1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="collisionShape2D1" type="CollisionShape2D" parent="area2D1"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="area2D1" to="." method="_on_area2D1_area_entered"]
